--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -6,15 +6,15 @@ body {
   height: 100%;
   overflow: hidden;
   padding: 0;
-  background-color: #001f2a;
+  background-color: #001922;
 }
 
 .account-wall {
   position: relative;
   margin-top: 50px;
-  padding: 100px 15px 30px 15px;
-  background-color: #0b0e11;
+  padding: 30px 15px 30px 15px;
+  background-color: #040507;
   box-shadow: 10px 0px 15px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  color: #FFFFE0;
+  color: #FFFFC0;
 }
