Added basic form validation

--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -32,7 +32,30 @@ html, body {
 	font-family: Georgia, serif;
 }
 
-.optional{
+.optional {
 	background-color: #d9edf7;
-	box-shadow: 0px 0px 3px 1px #d9edf7;
+	box-shadow: 0px 0px 10px 1px #d9edf7;
+}
+
+.popover-title {
+	color: black;
+}
+
+.popover {
+	color: black;
+}
+
+.debug {
+	background-color: black;
+	color:white;
+}
+
+.ng-invalid.ng-dirty{
+	border-color:#FA787E;
+	/*box-shadow: 0px 0px 10px 1px #FA787E;*/
+}
+
+.ng-valid.ng-dirty{
+	border-color:#78FA89;
+	/*box-shadow: 0px 0px 10px 1px #78FA89;*/
 }
