--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -49,3 +49,22 @@ html, body {
 	background-color: black;
 	color:white;
 }
+
+.booklist{
+	background: #FFFFFF;
+	border-radius: 6px;
+}
+
+.center{
+	vertical-align: middle;
+	align-content: center;
+}
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  }
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
+}
