Added top navigation panel and creative loader
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -29,7 +29,8 @@ html, body {
 }
 
 .Title {
-	font-family: Georgia, serif;
+	font-family: 'Oxygen', sans-serif;
+	/* font-family: Georgia, serif; */
 }
 
 .optional {
