--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -87,6 +87,12 @@ html, body {
 
 .shop-row-3 {
 	width: 15%;
+	text-align: center;
+}
+
+.mylikeclass{
+	margin: 10px 10px;
+	padding: 7px 10px;
 }
 
 .reading_pane {
@@ -98,10 +104,11 @@ html, body {
 	text-align: justify;
 	padding: 0px 12px;
 }
-.pagenum
-{
+
+.pagenum {
 	display: none;
 }
+
 .reading_pane>*>.blockquot {
 	text-align: center;
 }
