--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -90,9 +90,8 @@ html, body {
 	text-align: center;
 }
 
-.mylikeclass{
-	margin: 10px 10px;
-	padding: 7px 10px;
+.mylikeclass {
+	padding: 7px 10px 10px 10px;
 }
 
 .reading_pane {
