Changed the color of badge in MyBooks
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/css/Main.css
+++ b/WebContent/css/Main.css
@@ -131,3 +131,8 @@ html, body {
 .reading_pane>*>h4 {
 	text-align: center;
 }
+
+.btn-info .mylikesbadge {
+	color: #ffffff;
+	background-color: #333;
+}
